--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -8,7 +8,7 @@
 <body>
 	 <div th:include="common/header.html"></div>
 	 
-	<button onclick="location.href='/admin/select/retireNEmployee'">전체 인원 조회</button>
+	<button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button>
 	<button onclick="location.href='/admin/hr/regist/employee'">직원 등록(hr)</button>
 	
 	<div sec:authorize="hasRole('ROLE_ADMIN_HR')">
@@ -19,6 +19,7 @@
 	<th:block sec:authorize="hasRole('ROLE_ADMIN_BOSS')">
 		<button>(boss)</button>
 	</th:block>
+	
 	</div>
 	<button onclick="location.href='/admin/boss/regist/employee'">직원 대기중(관리자boss)</button>
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
@@ -41,3 +42,6 @@
 	 
 </body>
 </html>
+
+
+	
