--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
@@ -85,7 +85,7 @@
         <!-- 등록 내용 -->
         <div id="tab-1" class="tab-content current">
             <div align="left">
-		        <form action="/admin/hr/regist/employee" method="post" id="registForm">
+		        <form action="/admin/hr/regist/employee" method="post" id="registForm" encType="multipart/form-data">
 	                <table class="tg" style="table-layout: fixed; width: 736px">
 	                <colgroup>
 	                <col style="width: 158px">
@@ -112,7 +112,41 @@
 	                    <td class="tg-7btt" style="display: none;"><input name="employeeNo" th:value="${employeeNo}"/></td>
 	                    <td class="tg-7btt">이름</td>
 	                    <td class="tg-7btt"><input type="text" id="employeeName" name="employeeName" class="required" maxlength='4' required></td>
-	                    <td class="tg-7btt" colspan="2" rowspan="3"><div id="picture">사진</div></td>
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    <!-- <td class="tg-7btt" colspan="2" rowspan="3"><div id="picture">사진</div></td> -->
+	                    <td class="tg-7btt" colspan="2" rowspan="3">사진 <img id="pictureImg" width="100px" height="100px"></td>
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
+	                    
 	                  </tr>
 	                  <tr>
 	                    <td class="tg-7btt">ID</td>
@@ -130,7 +164,7 @@
 	                    	<input type="text" id="employeePhone2" name="employeePhone2" class="required" maxlength='4' required>-
 	                    	<input type="text" id="employeePhone3" name="employeePhone3" class="required" maxlength='4' required>
 	                    	<input style="display: none;" type="text" id="employeePhone" name="employeePhone">
-	                    	
+	                    
 	                    </td>
 	                  </tr>
 	                  <tr>
@@ -150,9 +184,11 @@
 	                    <option value="hanmail.com">hanmail.com</option>
 	                      </select>
 	              		<td class="tg-7btt"style="display: none;"><input id="employeeEmail" name="employeeEmail" type="text"/></td>
-	                  </td>
+	              		
 	                    <td class="tg-7btt"> <button type="button" id="pictureRegist" name="pictureRegist">등록</button> </td>
 	                    <td class="tg-7btt"> <button type="button"id="pictureDelete" name="pictureDelete">삭제</button> </td>
+	                    <td style="display: none;"> <input type="file" id="picture" name="picture" onchange="loadImg(this,1)">
+	                    
 	                  </tr>
 	                  <tr>
 	                    <td class="tg-7btt">우편번호</td>
@@ -200,7 +236,6 @@
                 <br>
             </div>
         </div>
-
 
 
         <!-- 대기중 내용 -->
@@ -299,11 +334,34 @@
 
     </div>
 
-
-
-
-
     <script>
+    
+    /* 사진등록 */
+    
+			/* 이미지 미리보기 관련 스크립트 */
+			const pictureRegist = document.getElementById("pictureRegist");
+			
+			pictureRegist.onclick = function() {
+				document.getElementById("picture").click();
+			}
+	
+			/* 이미지 미리보기 관련 함수(File API 활용하기) */
+			function loadImg(value, num) {
+				
+				/* https://developer.mozilla.org/ko/docs/Web/API/FileReader 참고 (MDN 사이트 참고)*/
+				if (value.files && value.files[0]) {			// value.files[0]는 파일 이름
+					const reader = new FileReader();
+				
+					reader.readAsDataURL(value.files[0]);		// Base64방식으로 파일을 FileReader에 전달 (Base64로 인코딩한 것은 브라우저가 원래 데이터로 만들게 됨)
+					
+					/* load 이벤트의 핸들러로 읽기 동작이 성공적으로 완료 되었을 때마다 발생한다. */
+					reader.onload = function(e) {				// load EventListener에 function 등록 (FileReader에서 전달 받은 파일을 다 읽으면 리스너에 등록한 function이 호출 됨)
+							document.getElementById("pictureImg").src = e.target.result;
+							
+						}
+					}
+				}
+    
     /* 회원 수정 정보 */
   	$("#regist").click(function(){
   		const phone1 = $("#employeePhone1").val();
@@ -330,7 +388,8 @@
   				
   			}
   		}
-	})  
+	})   
+
 	$("#resetButton").click(function(){
 		if(confirm("초기화 하시겠습니까?")){
 			document.getElementById("registForm").reset();
