--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -67,7 +67,7 @@
     			const jbHtml = $( 'section' ).html();
 
     			$.ajax({
-    				url: "accpet",
+    				url: "submmit",
     				type:"POST",
     				data:{	
     					jbHtml : jbHtml,
