--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckList.html
@@ -7,6 +7,8 @@
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" type="text/css"
+		th:href="@{/css/employee/checklist/checkListTable.css}">
 <title>ProjectClean</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
 		}
 	</script>	
 	
-	<table id="taskInfo" border="1" style="margin-left: 25%; margin-top: 10%; text-align: center;" >
+	<table id="taskInfo">
 		<thead>
 			<tr>
 				<td width="100">예약 번호</td>
