--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
@@ -7,6 +7,8 @@
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" type="text/css"
+	th:href="@{/css/employee/checklist/checkListTable.css}">
 <title>ProjectClean</title>
 </head>
 <body>
@@ -20,7 +22,7 @@
 		}
 	</script>	
 	
-	<table id="taskInfo" border="1">
+	<table id="taskInfo">
 		<thead>
 			<tr>
 				<td width="100">예약 번호</td>
@@ -91,7 +93,7 @@
 						const businessStartDay = button.parentNode.querySelector('.st').innerText.substring(8, 10)
 						const businessStartHours = button.parentNode.querySelector('.st').innerText.substring(10, 16);
 						
-						if(nowDay == businessStartDay){
+						/* if(nowDay == businessStartDay){ */
 							console.log(businessStartHours)
 							/* if(businessStartHours > nowHours && businessStartHours < maxHours){ */
 							
@@ -103,11 +105,11 @@
 								console.log(resNo2)
 								console.log(resNo3)
  							 	location.href="/employee/checkList/start?re="+ resNo3;
-						} else{
+/* 						} else{
 							
 							alert("업무를 시작할 수 없습니다. ")
 						};
-							
+ */							
 						/* } else{
 							
 							alert("업무를 시작할 수 없습니다. ")
