--- a/com-project-clean/src/main/resources/templates/common/hrAside.html
+++ b/com-project-clean/src/main/resources/templates/common/hrAside.html
@@ -85,7 +85,7 @@ body {
         <a href="#">휴가 신청</a>
         <a href="#">나의 휴가 조회</a>
         <a href="#">휴가 전체 조회</a>
-        <a href="#">승인 대기 목록</a>
+        <a href="">승인 대기 목록</a>
     </div>
 </div>
 
