--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
@@ -126,8 +126,7 @@
 	                    <option value="hanmail.com">hanmail.com</option>
 	            </select>
 	            <td style="display: none;"><input id="adminEmail" name="adminEmail" type="text"/></td>
-		        </td>
-		        <td colspan="2"><input type="file" id="thumbnailImg" name="thumbnailImg" onchange="loadImg(this,1)" style="display: none"></td>
+		         <td colspan="2"><input type="file" id="thumbnailImg" name="thumbnailImg" onchange="loadImg(this,1)" style="display: none"></td>
 		      </tr>
 		      <tr>
 		        <td>우편번호</td>
@@ -278,29 +277,33 @@
 	        }
 	    };
 			
-			/* 이미지 미리보기 관련 스크립트 */
-			const $adminImg = document.getElementById("adminImg");
+		</script>
+		
+		<script>
+		/* 이미지 미리보기 관련 스크립트 */
+		const $adminImg = document.getElementById("adminImg");
+		
+		$adminImg.onclick = function() {
+			document.getElementById("thumbnailImg").click();
+		}
+
+		/* 이미지 미리보기 관련 함수(File API 활용하기) */
+		function loadImg(value, num) {
 			
-			$adminImg.onclick = function() {
-				document.getElementById("thumbnailImg").click();
-			}
-	
-			/* 이미지 미리보기 관련 함수(File API 활용하기) */
-			function loadImg(value, num) {
+			/* https://developer.mozilla.org/ko/docs/Web/API/FileReader 참고 (MDN 사이트 참고)*/
+			if (value.files && value.files[0]) {			// value.files[0]는 파일 이름
+				const reader = new FileReader();
+				reader.readAsDataURL(value.files[0]);		// Base64방식으로 파일을 FileReader에 전달 (Base64로 인코딩한 것은 브라우저가 원래 데이터로 만들게 됨)
 				
-				/* https://developer.mozilla.org/ko/docs/Web/API/FileReader 참고 (MDN 사이트 참고)*/
-				if (value.files && value.files[0]) {			// value.files[0]는 파일 이름
-					const reader = new FileReader();
-					reader.readAsDataURL(value.files[0]);		// Base64방식으로 파일을 FileReader에 전달 (Base64로 인코딩한 것은 브라우저가 원래 데이터로 만들게 됨)
-					
-					/* load 이벤트의 핸들러로 읽기 동작이 성공적으로 완료 되었을 때마다 발생한다. */
-					reader.onload = function(e) {				// load EventListener에 function 등록 (FileReader에서 전달 받은 파일을 다 읽으면 리스너에 등록한 function이 호출 됨)
-							document.getElementById("adminImg").src = e.target.result;
-							
-						}
+				/* load 이벤트의 핸들러로 읽기 동작이 성공적으로 완료 되었을 때마다 발생한다. */
+				reader.onload = function(e) {				// load EventListener에 function 등록 (FileReader에서 전달 받은 파일을 다 읽으면 리스너에 등록한 function이 호출 됨)
+						document.getElementById("adminImg").src = e.target.result;
+						
 					}
 				}
-			
+			}
+		
+		
 		</script>
 </body>
 </html>
