--- a/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
@@ -26,67 +26,71 @@
         <col style="width: 68px">
         <col style="width: 69px">
         </colgroup>
-        <thead>
+         <thead>
           <tr>
             <td class="tg-7btt">직원번호</td>
-            <td class="tg-7btt"></td>
+            <!-- @{/adminEmployeePicture/} + ${employee.employeePictureSaveName} -->
+            <td class="tg-7btt" th:text="${employee.employeeNo}"></td>
             <td class="tg-7btt">이름</td>
-            <td class="tg-7btt"></td>
-            <td class="tg-7btt" colspan="2" rowspan="3"><div id="picture">사진</div></td>
+            <td class="tg-7btt" th:text="${employee.employeeName}"></td>
+            <td class="tg-7btt" colspan="2" rowspan="3">
+            
+             <img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${employee.employeePictureSaveName}" 
+             	  alt="사진을 등록해주세요" width="100px" height="100px">
+            </td>
+            <!-- <td class="tg-7btt" colspan="2" rowspan="3" th:text="${employeePicture.employeePictureSaveName}"></td> -->
           </tr>
           <tr>
             <td class="tg-7btt">ID</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeId}"></td>
             <td class="tg-7btt">전화번호</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeePhone}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">생년월일</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeBirth}"></td>
             <td class="tg-7btt">퇴사여부</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeRetireYn}"></td>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td class="tg-7btt">이메일</td>
-            <td class="tg-7btt" colspan="5"></td>
+            <td class="tg-7btt" colspan="5" th:text="${employee.employeeEmail}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">우편번호</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${address.addressNo}"></td>
             <td class="tg-7btt">기본주소</td>
-            <td class="tg-7btt"></td>
-            <td class="tg-7btt" colspan="2"><button id="findAddress">주소찾기</button></td>
+            <td class="tg-7btt" colspan='3' th:text="${address.address}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">상세주소</td>
-            <td class="tg-7btt" colspan="5"></td>
+            <td class="tg-7btt" colspan="5" th:text="${address.addressDetail}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">입사일</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeHireDate}"></td>
             <td class="tg-7btt">퇴사일</td>
-            <td class="tg-7btt" colspan="3"></td>
+            <td class="tg-7btt" colspan="3" th:text="${employee.employeeRetireDate}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">누적경고횟수</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeSumCount}"></td>
             <td class="tg-7btt">누적근무시간</td>
-            <td class="tg-7btt" colspan="3"></td>
+            <td class="tg-7btt" colspan="3" th:text="${employee.employeeSumTime}"></td>
           </tr>
           <tr>
             <td class="tg-7btt">마지막 로그인 일자</td>
-            <td class="tg-7btt"></td>
+            <td class="tg-7btt" th:text="${employee.employeeLastLoginDate}"></td>
             <td class="tg-7btt">블랙리스트 여부</td>
-            <td class="tg-7btt" colspan="3"></td>
+            <td class="tg-7btt" colspan="3" th:text="${employee.employeeBlackListYn}"></td>
           </tr>
         </tbody>
         </table>
         <br>
         <table class="button">
             <tr>
-                <td><button id="modify">수정</button></td>
             </tr>
         </table>
     </div>
