--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registMainEmployee.html
@@ -113,38 +113,8 @@
 	                    <td class="tg-7btt">이름</td>
 	                    <td class="tg-7btt"><input type="text" id="employeeName" name="employeeName" class="required" maxlength='4' required></td>
 	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
 	                    <!-- <td class="tg-7btt" colspan="2" rowspan="3"><div id="picture">사진</div></td> -->
 	                    <td class="tg-7btt" colspan="2" rowspan="3">사진 <img id="pictureImg" width="100px" height="100px"></td>
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
-	                    
 	                    
 	                    
 	                  </tr>
@@ -286,6 +256,7 @@
                     </tr>
                 </tbody>
             </table>
+			
 
         </div>
 
@@ -329,7 +300,7 @@
                     </tr>
                 </tbody>
             </table>
-
+			<div id="waitingPaging"> <div th:replace="/admin/humanResource/registEmployee/returnPaging.html"></div></div>
         </div>
 
     </div>
