--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thyme.org">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
@@ -84,18 +84,20 @@
                 </tr>
             </thead>
             <tbody>
-            <c:forEach varStatus="index" items="${requestScope.data}">
-                <tr>
-                  <td>${ index.vacationNo }</td>
-                  <td>${ index.vacationName }</td>
-                  <td>${ index.vacationStart }</td>
-                  <td>${ index.vacationEnd }</td>
-                  <td>${ index.vacationDivision }</td>
-                  <td>${ index.vacationStatus }</td>
-                </tr>
-            </c:forEach>
+				<tbody>
+					<tr th:each="index : ${vacation}">
+						<td th:text="${ index.employeeNo }"></td>
+						<td th:text="${ index.employeeName }"></td>
+						<td th:text="${ index.employeeBirth }"></td>
+						<td th:text="${ index.employeeAddress }"></td>
+						<td th:text="${ index.employeePhone }"></td>
+						<td th:text="${ index.employeeHireDate }"></td>
+					</tr>
+				</tbody>
             </tbody>
         </table>
+        <div id="blackListPaging"> <div th:replace="/admin/humanResource/vacation/vacationPaging.html"></div></div>
+        
     </div>
     </div>
 </body>
