--- a/com-project-clean/src/main/resources/templates/common/main.html
+++ b/com-project-clean/src/main/resources/templates/common/main.html
@@ -2,6 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org"
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" th:href="@{/css/common/login/loginPage.css}" />
 <title>Project Clean ERP</title>
@@ -14,6 +15,7 @@
 			alert(userFindId)
 		}
 	</script>
+	
 	<th:block sec:authorize="isAnonymous()">
 		<section class="container-fluid">
 			<div class="logintopnav col-xl-3">
@@ -51,15 +53,13 @@
 	                <button type="button" onclick="location.href='common/find/id'" class="idFind col-xl-3">아이디 찾기</button>
 	            </div>
             <br>
-<!--  
-	            <div  class="loginbottomnav col-xl-3">
-	                <button type="button" onclick="location.href='common/find/password'" class="pwdFind col-xl-3">비밀번호 찾기</button>
-	            </div>
-	 -->
 	        </div>
 	        
     	</section>
 	</th:block>	
 	
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src='/js/mainSocket.js'></script>
 </html>
