--- a/com-project-clean/src/main/resources/templates/common/main.html
+++ b/com-project-clean/src/main/resources/templates/common/main.html
@@ -10,9 +10,9 @@
 <body>
 
 	<script>
-		const userFindId = "[[${resultMessage}]]";
-		if(userFindId){
-			alert(userFindId)
+		const Message = "[[${Message}]]";
+		if(Message){
+			alert(Message)
 		}
 	</script>
 	
