--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -26,14 +26,15 @@
 </section>
 <div class="submitarea">
 	<input type="button" value="승인" id="accept">
-	<input type="button" value="블랙리스트 경고 횟수 추가" id="denial">
+	&nbsp;&nbsp;&nbsp;&nbsp;
+	<input type="button" value="블랙+" id="denial">
 </div>
 <!-- textarea script -->
 <script>
-
-	$("#employeeOpnion").prop("readonly", true);
+	
+	$("#adminOpnion").prop("readonly", true);
+	$("#adminOpnion2").prop("readonly", true);
 	$("#employeeOpnion2").prop("readonly", true);
-
 	$('textarea').keyup(function(){
 		var letter = $(this).val()
 		$('#adminOpnion').html(letter)
@@ -47,9 +48,6 @@
     	document.getElementById("denial").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
     		if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까?")){
-    			
-    			document.getElementById("adminOpnion2").remove();
-    			document.getElementById("adminOpnion").style="";
     			
     			const jbHtml = $( 'section' ).html();
     			const blackYn = 2;
@@ -77,9 +75,6 @@
     	document.getElementById("accept").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
     		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
-    			
-    			document.getElementById("adminOpnion2").remove();
-    			document.getElementById("adminOpnion").style="";
 
     			const jbHtml = $( 'section' ).html();
     			$.ajax({
@@ -103,18 +98,5 @@
     	}
 
     </script>	
-
-	<script>
-		const checkboxs = document.querySelectorAll('form .checklist .checkbox');
-			for(let i =0; i < checkboxs.length; i++){
-				const checkbox = checkboxs[i]
-				if(checkbox.value == "NOT"){
-					$(checkbox).attr("disabled", true)
-				} else if(checkbox.value == "YES") {
-					$(checkbox).attr("checked",true)
-					$(checkbox).attr("disabled", true)
-				};
-		};
-	</script>
 </body>
 </html>
