--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -5,15 +5,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Project Clean</title>
-    <link rel="stylesheet"
-    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" type="text/css"
+
+    <link 
+    	rel="stylesheet" type="text/css"
     	th:href="@{/css/employee/checklist/checkList.css}">
-   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-<!--     <script src='/js/checklistCheckBox.js'></script> -->
-<!--  <script src='/js/checklistFile.js'></script>   -->
-<!--     <script src='/js/checklistCanvas.js'></script> -->
+   	<script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script 
+    	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+    <link 
+    	rel="stylesheet" type="text/css"
+    	th:href="@{/css/employee/checklist/checkList.css}">
 
 </head>
 
@@ -86,10 +88,10 @@
     	}
 
     </script>	 	
-			
-			
-	<!-- fileupload script -->
+	
+	<!-- fileUpload script -->
 	<script>
+	
 	const $contentImgArea1 = document.getElementById("contentImgArea1");
 	const $contentImgArea2 = document.getElementById("contentImgArea2");
 	
@@ -120,26 +122,28 @@
 			}
 		}
 	}
-	</script>
-	
-	<!-- checkbox sciprt -->
+
+
+	</script>	
+			
+	<!-- checkBox script -->		
 	<script>
-		$("input[type='checkbox']").each(function(){
-			if($(this).is(":checked") == true){
-				$(this).val("YES");
-			} else if($(this).is(":checked") == false){
-				$(this).val("NOT")
-			}
-		});
-		
-		$("input[type='checkbox']").change(function(){
-			if($(this).is(":checked") == true){
-				$(this).val("YES");
-			} else{
-				$(this).val("NOT");
-			}
-		});
-		
+	$("input[type='checkbox']").each(function(){
+		if($(this).is(":checked") == true){
+			$(this).val("YES");
+		} else if($(this).is(":checked") == false){
+			$(this).val("NOT")
+		}
+	});
+
+	$("input[type='checkbox']").change(function(){
+		if($(this).is(":checked") == true){
+			$(this).val("YES");
+		} else{
+			$(this).val("NOT");
+		}
+	});
+
 	</script>
 	
 	<!--  canvas script -->
@@ -208,7 +212,6 @@
 		                            	const canvas = document.getElementById('canvas');
 		                            	const dataURL = canvas.toDataURL();
 		                            	document.getElementById("signImg").src = dataURL;
-		                            	console.log(dataURL)
 		                            	document.getElementById("canvas").remove();
 		                            	
 		                            });        
@@ -225,8 +228,8 @@
 		                            }}})());  
 			
 							
-	};						
+	};			
 	</script>
-
+	
 </body>
 </html>
