--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectAcceptlCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectAcceptlCheckListDetails.html
@@ -4,13 +4,16 @@
 <head>
 <meta charset="UTF-8">
 <title>Project Clean</title>
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/employee/checklist/checkList.css}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
 
+	<link 
+		rel="stylesheet" type="text/css"
+		th:href="@{/css/employee/checklist/checkList.css}">
+	<script 
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script 
+		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+	<script 
+	      src='/js/checklistCheckBox2.js'></script>
 </head>
 <body>
 
@@ -21,21 +24,8 @@
 		<p th:utext="${checkList.checkHTML}" class="jbHtml"></p>			
 		
 </section>
-	
-<!-- checkbox sciprt -->
-	<script>
-		const checkboxs = document.querySelectorAll('form .checklist .checkbox');
-			for(let i =0; i < checkboxs.length; i++){
-				const checkbox = checkboxs[i]
-				if(checkbox.value == "NOT"){
-					$(checkbox).attr("disabled", true)
-				} else if(checkbox.value == "YES") {
-					$(checkbox).attr("checked",true)
-					$(checkbox).attr("disabled", true)
-				};
-		};
-	</script>
 
+<!-- checkBox script -->
 
 </body>
 </html>
