--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -4,17 +4,20 @@
 <head>
 <meta charset="UTF-8">
 <title>Project Clean</title>
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/employee/checklist/checkList.css}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
 
+	<link 
+		rel="stylesheet" type="text/css"
+		th:href="@{/css/employee/checklist/checkList.css}">
+	<script 
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script 
+		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+	      
 </head>
 <body>
 
 <section>
+
 	<form method="post" action="admin/checklist/denial"  enctype="multipart/form-data">
 	
 		<input type="hidden" th:value="${checkList.checkReservationNo}" class="reservationNo" name="reservationNo"> 
@@ -32,8 +35,10 @@
 	    	</div>
 	    	
 	    </th:block>
-		<br><br>				
+	    
+	<br><br>				
 	</form>
+
 </section>
 
 	<th:block th:if="${ checkList.checkStatus == 'D' }">	
@@ -88,20 +93,18 @@
 
     </script>	
 
-<!-- checkbox sciprt -->
-	<script>
-		const checkboxs = document.querySelectorAll('form .checklist .checkbox');
-			for(let i =0; i < checkboxs.length; i++){
-				const checkbox = checkboxs[i]
-				if(checkbox.value == "NOT"){
-					$(checkbox).attr("disabled", true)
-				} else if(checkbox.value == "YES") {
-					$(checkbox).attr("checked",true)
-					$(checkbox).attr("disabled", true)
-				};
-		};
-	</script>
-
-
+<!-- checkbox script -->
+<script>
+const checkboxs = document.querySelectorAll('form .checklist .checkbox');
+for(let i =0; i < checkboxs.length; i++){
+	const checkbox = checkboxs[i]
+	if(checkbox.value == "NOT"){
+		$(checkbox).attr("disabled", true)
+	} else if(checkbox.value == "YES") {
+		$(checkbox).attr("checked",true)
+		$(checkbox).attr("disabled", true)
+	};
+};
+</script>
 </body>
 </html>
