--- a/com-project-clean/src/main/resources/templates/employee/checkList/startChecklist.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/startChecklist.html
@@ -3,20 +3,28 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
-<title>Project Clean</title>    
-    <link rel="stylesheet"
-    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" type="text/css"
+<title>Project Clean</title>
+    
+    <link 
+    	rel="stylesheet" type="text/css"
     	th:href="@{/css/employee/checklist/checkList.css}">
-   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+   	<script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script 
+    	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+   	<link 
+		rel="stylesheet" 
+    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
+    <script 
+    	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    	
     <title>Document</title>
 </head>
 
 <body>
 	    <section hidden id="checklist" class="container-fluid" >
 	        <div class="logintopnav col-xl-3">
-	            <a href="/"><h3 class= "mainlogo">CLEANUP</h3></a>
+	            <a href="/" id="backToMain"><h3 class= "mainlogo">CLEANUP</h3></a>
 	        </div>
 	
 	        <h3 class="title col-xl-3"> 업무 체크리스트 </h3>
