--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -16,7 +16,6 @@
     <link 
     	rel="stylesheet" type="text/css"
     	th:href="@{/css/employee/checklist/checkList.css}">
-
 </head>
 
 <body>
@@ -59,8 +58,17 @@
     <button id="reset"  type="button">서명 취소</button>
 	</div>
 	<br><br><br><br>    	
-	<input type="button" id="submitButton" value="제출" class="submittbtn" >	        
-	 	
+	<input type="button" id="submitButton" value="제출" class="submittbtn" >	  
+	
+	<form id="messageForm" name="messageForm">
+		<div class="form-group">
+			<div class="input-group clearfix">
+   				<input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+      	 		<button type="submit">보내기</button>
+   			</div> 	
+		</div>
+    </form>
+    
 	<!-- submit script -->
     <script>
 	    
@@ -232,4 +240,10 @@
 	</script>
 	
 </body>
+	<script 
+		src='/js/mainSocket.js'></script>
+	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>	
 </html>
