--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -4,12 +4,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 	 <div th:include="common/header.html"></div>
 	 
 	<button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button>
-	<button onclick="location.href='/admin/hr/regist/employee'">직원 등록(hr)</button>
+	<button onclick="location.href='/admin/hr/regist/EmployeePage'">직원 등록(hr)</button>
 	
 	<div sec:authorize="hasRole('ROLE_ADMIN_HR')">
 	<th:block sec:authorize="!hasRole('ROLE_ADMIN_BOSS')">
@@ -22,8 +23,13 @@
 	
 	</div>
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
-	<button onclick="location.href='/member/select/selectMyVacation'">나의 휴가 조회</button>
+	
+	<button type="button" id="myVacationList">나의 휴가 조회(직원)</button>
+	      <div style="display: none;" id="myVacation" sec:authentication="principal.adminNo"></div>
+	
 	<button onclick="location.href='/admin/hr/select/Allvacation'">휴가 전체 조회</button>
+
+	
 	 <br>
 	 <br>
 	 <hr>
@@ -40,6 +46,13 @@
 		<input value="휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbyVacationList'">
 	 <!-- <div th:include="admin/adminAside.html"></div> -->
 	 
+	 <script>
+    	  const adminNoValue = $("#myVacation").text();
+      
+      $("#myVacationList").click(function(){
+    	  location.href="/admin/select/selectMyVacation?adminNo="+adminNoValue;
+      });
+	 </script>
 </body>
 </html>
 
