--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -33,54 +33,14 @@
             margin: 0 auto;
         }
 
-        ul.tabs {
-            margin: 0px;
-            padding: 0px;
-            list-style: none;
-        }
-
-        /* 선택하지 않은 탭 css */
-        ul.tabs li {
-            background: rgba(219, 243, 249, 1);
-            color: rgb(0, 0, 0);
-            display: inline-block;
-            padding: 10px 15px;
-            /* 좌측은 위아래 사이즈 우측은 좌우 사이즈 */
-            cursor: pointer;
-        }
-
-        /* 선택한 탭 css 설정 */
-        ul.tabs li.current {
-            background: rgba(104, 228, 255, 1);
-            color: rgb(0, 0, 0);
-        }
-
-        /* 선택한 탭의 내용 css 설정 */
-        .tab-content {
-            display: none;
-            background: #e95151;
-            padding: 15px;
-        }
-
-        .tab-content.current {
-            display: inherit;
-        }
-
-        .button{
-            text-align: center;
-        }
 
     </style>
 </head>
 
 <body>
     <div class="container">
+		<div th:replace="/admin/humanResource/registEmployee/adminRegistMainHeader.html"></div>
 
-        <ul class="tabs">
-            <li class="tab-link current" data-tab="tab-1">등록</li>
-            <li class="tab-link" data-tab="tab-2">대기중</li>
-            <li class="tab-link" data-tab="tab-3">반려</li>
-        </ul>
 
         <!-- 등록 내용 -->
         <div id="tab-1" class="tab-content current">
@@ -206,103 +166,6 @@
                 <br>
             </div>
         </div>
-
-
-        <!-- 대기중 내용 -->
-        <div id="tab-2" class="tab-content">
-            <span>대기인원 조회</span>
-
-            <select name="waitCategory" id="waitCategory">
-                <option value="waitEmpNo" selected>사원번호</option>
-                <option value="waitEmpName">이름</option>
-                <option value="waitEmpBirth">생년월일</option>
-                <option value="waitEmpAddress">주소</option>
-                <option value="waitEmpPhone">전화번호</option>
-            </select>
-            <input type="text" name="waitCategoryValue">
-            <button type="button" id="waitSearch">검색</button>
-
-            <table id="employeeList" border="1">
-                <thead>
-                    <tr>
-                        <th>사원번호</th>
-                        <th>이름</th>
-                        <th>생년월일</th>
-                        <th>주소</th>
-                        <th>전화번호</th>
-                        <th>성별</th>
-                    </tr>
-                </thead>
-                <tbody sec:authorize="hasRole('ROLE_ADMIN_HR')">
-                	
-                	<!-- HR -->
-                    <tr sec:authorize="!hasRole('ROLE_ADMIN_BOSS')" th:each="index : ${waitingEmployeeList}">	
-	                    <td class="waitingEmployee" th:text="${ index.employeeNo }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeName }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeBirth }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeAddress }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeePhone }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeGender }"></td>
-                    </tr>
-                    
-                    <!-- BOSS -->
-                    <tr sec:authorize="hasRole('ROLE_ADMIN_BOSS')" th:each="index : ${waitingEmployeeListBoss}">
-	                    <td class="waitingEmployee" th:text="${ index.employeeNo }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeName }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeBirth }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeAddress }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeePhone }"></td>
-	                    <td class="waitingEmployee" th:text="${ index.employeeGender }"></td>
-                    </tr>
-                </tbody>
-            </table>
-			
-
-        </div>
-
-        <!-- 반려 내용 -->
-        <div id="tab-3" class="tab-content">
-            <span>반려인원 조회</span>
-
-            <select name="returnCategory" id="returnCategory">
-                <option value="returnEmpNo" selected>사원번호</option>
-                <option value="returnEmpName">이름</option>
-                <option value="returnEmpBirth">생년월일</option>
-                <option value="returnEmpAddress">주소</option>
-                <option value="returnEmpPhone">전화번호</option>
-            </select>
-            <input type="text" name="returnCategoryValue">
-            <button type="button" id="returnSearch">검색</button>
-
-            <table id="returnEmployeeList" border="1">
-                <thead>
-                    <tr>
-                        <th>사원번호</th>
-                        <th>이름</th>
-                        <th>생년월일</th>
-                        <th>1차 반려 여부</th>
-                        <th>2차 반려 여부</th>
-                        <th>최종 반려 여부</th>
-                        <th>전화번호</th>
-                        <th>성별</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="index : ${returnEmployeeList}">
-	                    <td class="returnEmployee" th:text="${ index.employeeNo }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeName }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeBirth }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeFirstConfirmYn }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeSecondConfirmYn }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeRegistReturnYn }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeePhone }"></td>
-	                    <td class="returnEmployee" th:text="${ index.employeeGender }"></td>
-                    </tr>
-                </tbody>
-            </table>
-			<div id="waitingPaging"> <div th:replace="/admin/humanResource/registEmployee/returnPaging.html"></div></div>
-        </div>
-
     </div>
 
     <script>
@@ -333,7 +196,7 @@
 					}
 				}
     
-    /* 회원 수정 정보 */
+    /* 회원 등록 정보 */
   	$("#regist").click(function(){
   		const phone1 = $("#employeePhone1").val();
   		const phone2 = $("#employeePhone2").val();
@@ -430,133 +293,6 @@
         }
     )
     
-    
-    
-        /* 탭 전환 관련 스크립트 */
-        $(document).ready(function () {
-
-            $('ul.tabs li').click(function () {
-                var tab_id = $(this).attr('data-tab');
-
-                $('ul.tabs li').removeClass('current');
-                $('.tab-content').removeClass('current');
-
-                $(this).addClass('current');
-                $("#" + tab_id).addClass('current');
-            })
-
-        })
-
-        /* 대기중 검색기능 list 출력 */
-		$("#waitSearch").click(function(){
-			$.ajax({
-				url : "gson1",
-				success:function(data){
-
-					const $table = $("#employeeList tbody");
-					$table.html("");
-					
-					for(var index in data){
-						$tr = $("<tr>");
-						$noTd = $("<td>").text(data[index].no);
-						$nameTd = $("<td>").text(data[index].name);
-						$ageTd = $("<td>").text(data[index].age);
-						$enrollDateTd = $("<td>").text(data[index].enrollDate);
-						$unknown1 = $("<td>").text(data[index].enrollDate);
-						$unknown2 = $("<td>").text(data[index].enrollDate);
-						
-						$tr.append($noTd);
-						$tr.append($nameTd);
-						$tr.append($ageTd);
-						$tr.append($enrollDateTd);
-						$tr.append($unknown1);
-						$tr.append($unknown2);
-						
-						$table.append($tr);
-					}
-				},
-				error:function(error){
-					console.log(error);
-				}
-			});
-		});
-
-        /* 반려 검색기능 list 출력 */
-		$("#returnSearch").click(function(){
-			$.ajax({
-				url : "gson1",
-				success:function(data){
-
-					const $table = $("#employeeList tbody");
-					$table.html("");
-					
-					for(var index in data){
-						$tr = $("<tr>");
-						$noTd = $("<td>").text(data[index].no);
-						$nameTd = $("<td>").text(data[index].name);
-						$ageTd = $("<td>").text(data[index].age);
-						$enrollDateTd = $("<td>").text(data[index].enrollDate);
-						$unknown1 = $("<td>").text(data[index].enrollDate);
-						$unknown2 = $("<td>").text(data[index].enrollDate);
-						
-						$tr.append($noTd);
-						$tr.append($nameTd);
-						$tr.append($ageTd);
-						$tr.append($enrollDateTd);
-						$tr.append($unknown1);
-						$tr.append($unknown2);
-						
-						$table.append($tr);
-					}
-				},
-				error:function(error){
-					console.log(error);
-				}
-			});
-		});
-        
-        /* hover event */
-        function returnHover(){
-            const employee = document.getElementsByClassName("returnEmployee");
-
-            for(let i = 0; i < employee.length; i++){
-            	employee[i].onmouseenter = function(){
-                    this.parentNode.style.backgroundColor = "rgb(50,150,250)";
-                    this.parentNode.style.cursor = "pointer";
-                }
-            	employee[i].onmouseout = function(){
-                    this.parentNode.style.backgroundColor = "white";
-                }
-
-            	employee[i].onclick = function(){
-                    location.href="/admin/select/returnDetail/" + this.parentNode.children[0].innerText;
-                }
-            }
-        };
-        
-        function waitingHover(){
-            const employee = document.getElementsByClassName("waitingEmployee");
-
-            for(let i = 0; i < employee.length; i++){
-            	employee[i].onmouseenter = function(){
-                    this.parentNode.style.backgroundColor = "rgb(50,150,250)";
-                    this.parentNode.style.cursor = "pointer";
-                }
-            	employee[i].onmouseout = function(){
-                    this.parentNode.style.backgroundColor = "white";
-                }
-
-            	employee[i].onclick = function(){
-                    location.href="/admin/select/waitingDetail/" + this.parentNode.children[0].innerText;
-                }
-            }
-        };
-        
-        /* 시작 할 때 hover event */
-        $(function(){
-        	returnHover();
-        	waitingHover();
-        })
 
         
     </script>
