--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 
 <style type="text/css">
+
       /* 결재 테이블 */
       .tg  {border-collapse:collapse;border-spacing:0;}
       .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:12px;
@@ -76,7 +77,7 @@
             <tr>
               <td class="tg-amwm">결재 신청 날짜</td>
               <td class="tg-amwm" colspan="2">
-                <div name="confirmDate"> yyyy-MM-dd</div>
+                <div name="confirmDate" th:text="${vacation.requestDate}"></div>
               </td>
             </tr>
           </thead>
@@ -88,15 +89,15 @@
             </tr>
             <tr class="comfirmBox">
               <td class="tg-amwm">
-                <div id="humanResource" name="humanResource"></div>
+                <div id="humanResource" name="humanResource" th:text="${hrName}"></div>
               </td>
               <td class="tg-amwm">
-                <div id="boss" name="boss"></div>
+                <div id="boss" name="boss" th:text="${bossName}"></div>
               </td>
             </tr>
             <tr>
-              <td class="tg-amwm">yyyy-MM-dd</td>
-              <td class="tg-amwm">yyyy-MM-dd</td>
+              <td class="tg-amwm" th:text="${hrConfirm}"></td>
+              <td class="tg-amwm" th:text="${bossConfirm}"></td>
             </tr>
           </tbody>
         </table>
@@ -116,34 +117,38 @@
             <tbody>
               <tr>
                 <td class="tg2-7btt">성명</td>
-                <td class="tg2-7btt">유한조</td>
+                <td class="tg2-7btt" th:text="${admin.adminName}"></td>
               </tr>
               <tr>
                 <td class="tg2-7btt">직급</td>
-                <td class="tg2-7btt">사원</td>
+                <td class="tg2-7btt" th:text="${admin.adminJob}"></td>
               </tr>
               <tr>
                 <td class="tg2-7btt">휴가명</td>
-                <td class="tg2-7btt">월차</td>
+                <td class="tg2-7btt" th:text="${vacation.vacationName}"></td>
               </tr>
               <tr>
                 <td class="tg2-7btt">기간</td>
-                <td class="tg2-7btt">2022-08-28 ~ 2024-08-28</td>
+                <td class="tg2-7btt"th:text="${vacation.vacationStartDate} + '~' + ${vacation.vacationStartDate}"></td>
               </tr>
               <tr>
                 <td class="tg2-7btt">연락망</td>
-                <td class="tg2-7btt">010-1111-1111</td>
+                <td class="tg2-7btt" th:text="${admin.adminPhone}"></td>
               </tr>
               <tr>
-                <td class="tg2-7btt"><div class="reason">사유</div></td>
-                <td class="tg2-7btt"><div class="reason">휴가 신청합니다.</div></td>
+                <td class="tg2-7btt"><div class="reason" >사유</div></td>
+                <td class="tg2-7btt"><div class="reason" th:text="${vacation.vacationReason}"></div></td>
               </tr>
               <tr>
                 <td class="tg2-7btt" colspan="2">위와 같이 휴가를 신청하오니 승인하여 주시기 바랍니다.</td>
               </tr>
               <tr>
-                <td class="tg2-7btt"><div class="returnReason">반려사유</div></td>
-                <td class="tg2-7btt"><div id="returnReason"></div></td>
+                <td class="tg2-7btt"><div class="returnReason">인사담당자 의견</div></td>
+                <td class="tg2-7btt"><div id="returnReason" th:text="${hrReason}"></div></td>
+              </tr>
+              <tr>
+                <td class="tg2-7btt"><div class="returnReason">대표 의견</div></td>
+                <td class="tg2-7btt"><div id="returnReason" th:text="${bossReason}"></div></td>
               </tr>
             </tbody>
           </table>
