--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/vacationPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/vacationPaging.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -12,30 +13,32 @@
                   end=(${(pages.totalPages == 0) ? 1 : (start + (maxPage - 1) < pages.totalPages ? start + (maxPage - 1) : pages.totalPages)})">
 			<ul>
 				<li th:if="${start > 1}"><a
-					th:href="@{/admin/select/retireN?(page=0)}" th:text="'<<'"></a></li>
-				</li>
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=0)}" th:text="'<<'"></a></li>
 
 				<li th:if="${start > 1}"><a
-					th:href="@{/admin/select/retireN?(page=${start - maxPage})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start - maxPage})}"
 					th:text="'<'"></a></li>
 
 
 				<li th:each="page: ${#numbers.sequence(start, end)}"><a
-					th:href="@{/admin/select/retireN?(page=${page-1})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${page-1})}"
 					th:text="${page}"></a></li>
-				</li>
 
 				<li th:if="${end < pages.totalPages}"><a
-					th:href="@{/admin/select/retireN?(page=${start + maxPage})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start + maxPage})}"
 					th:text="'>'"></a></li>
 
 				<li th:if="${end < pages.totalPages}"><a
-					th:href="@{/admin/select/retireN?(page=${pages.totalPages-1})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${pages.totalPages-1})}"
 					th:text="'>>'"></a></li>
-				</li>
 			</ul>
 		</div>
 
-
+	 <br>
+	 <br>
+	 <hr>
+	 <br>
+	 <br>
+	 
 
 </html>
