--- a/com-project-clean/src/main/resources/templates/pay/adminPayPaging.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPayPaging.html
@@ -5,16 +5,41 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
 <style>
-	.pagingArea button {
-		width:30px;
+	
+	.search-area {
+		font-family: 'MinSans-Medium';
+		width: 90%;
+		margin:0 auto;
+		
+	}
+	
+	.search-area #searchCondition {
 		height:30px;
+		margin-top:-3px;
+	}
+		
+	.btn-bs {
+		width:70px;
+		margin-top:-6px;
+		height:32px;
+		font-size:13px;
+		padding: 0; 
+		background-color: #9AE8F9;
+	}
+	
+	/* 페이징버튼 css */
+	.pagingArea button {
+		font-family: 'MinSans-Medium';
+		width:30px;
+		height:40px;
 		background-color: #9AE8F9;
 		border-color:gray;
 		border-style: none;
 		font-weight:bold;
-		font-family: 'MinSans-Medium';
-    	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
 	}
+	
+	
+
 </style>
 </head>
 <body>
